--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,13 @@ services:
       - "3000:3000"
     environment:
       - REACT_APP_API_URL=http://api:8000
+      - REACT_APP_PROXY_API_BASE_URL=http://localhost:8080
     volumes:
       - ./frontend:/app
       - frontend_node_modules:/app/node_modules
     depends_on:
       - api
+      - go-proxy
 
   api:
     build:
@@ -29,6 +31,20 @@ services:
       - api_data:/data
     command: sh -c "python init_db.py && uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
 
+  go-proxy:
+    build:
+      context: ../latency-poison-go-api
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    environment:
+      - DATABASE_PATH=/data/users.db
+      - PORT=8080
+    volumes:
+      - api_data:/data
+    depends_on:
+      - api
+
 volumes:
   frontend_node_modules:
-  api_data: 
+  api_data:
