--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,16 @@ services:
   mysql:
     image: mysql:8.0
     ports:
-      - "3306:3306"
+      - "${DATABASE_PORT:-3306}:3306"
     environment:
-      - MYSQL_ROOT_PASSWORD=rootpassword
-      - MYSQL_DATABASE=latencypoison
-      - MYSQL_USER=latencypoison
-      - MYSQL_PASSWORD=latencypoison
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-rootpassword}
+      - MYSQL_DATABASE=${DATABASE_NAME:-latencypoison}
+      - MYSQL_USER=${DATABASE_USER:-latencypoison}
+      - MYSQL_PASSWORD=${DATABASE_PASSWORD:-latencypoison}
     volumes:
       - mysql_data:/var/lib/mysql
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-prootpassword"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${MYSQL_ROOT_PASSWORD:-rootpassword}"]
       interval: 5s
       timeout: 5s
       retries: 10
@@ -22,11 +22,11 @@ services:
   phpmyadmin:
     image: phpmyadmin:latest
     ports:
-      - "8081:80"
+      - "${PHPMYADMIN_PORT:-8081}:80"
     environment:
       - PMA_HOST=mysql
       - PMA_USER=root
-      - PMA_PASSWORD=rootpassword
+      - PMA_PASSWORD=${MYSQL_ROOT_PASSWORD:-rootpassword}
     depends_on:
       mysql:
         condition: service_healthy
@@ -36,10 +36,10 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - "${FRONTEND_PORT:-3000}:3000"
     environment:
-      - REACT_APP_API_URL=http://api:8000
-      - REACT_APP_PROXY_API_BASE_URL=http://localhost:8080
+      - REACT_APP_API_BASE_URL=${REACT_APP_API_BASE_URL:-http://localhost:8000}
+      - REACT_APP_PROXY_API_BASE_URL=${REACT_APP_PROXY_API_BASE_URL:-http://localhost:8080}
     volumes:
       - ./frontend:/app
       - frontend_node_modules:/app/node_modules
@@ -52,10 +52,15 @@ services:
       context: ./api
       dockerfile: Dockerfile
     ports:
-      - "8000:8000"
+      - "${API_PORT:-8000}:8000"
     environment:
-      - DATABASE_URL=mysql+pymysql://latencypoison:latencypoison@mysql:3306/latencypoison
-      - SECRET_KEY=your-secret-key-here
+      - DATABASE_URL=mysql+pymysql://${DATABASE_USER:-latencypoison}:${DATABASE_PASSWORD:-latencypoison}@mysql:3306/${DATABASE_NAME:-latencypoison}
+      - SECRET_KEY=${SECRET_KEY:-your-secret-key-change-in-production}
+      - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE_MINUTES:-30}
+      - ADMIN_USERNAME=${ADMIN_USERNAME:-admin}
+      - ADMIN_EMAIL=${ADMIN_EMAIL:-admin@example.com}
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin123}
+      - ADMIN_FULL_NAME=${ADMIN_FULL_NAME:-Administrator}
     volumes:
       - ./api:/app
     depends_on:
@@ -68,14 +73,14 @@ services:
       context: ./proxy
       dockerfile: Dockerfile
     ports:
-      - "8080:8080"
+      - "${PROXY_PORT:-8080}:8080"
     environment:
       - DATABASE_HOST=mysql
       - DATABASE_PORT=3306
-      - DATABASE_USER=latencypoison
-      - DATABASE_PASSWORD=latencypoison
-      - DATABASE_NAME=latencypoison
-      - PORT=8080
+      - DATABASE_USER=${DATABASE_USER:-latencypoison}
+      - DATABASE_PASSWORD=${DATABASE_PASSWORD:-latencypoison}
+      - DATABASE_NAME=${DATABASE_NAME:-latencypoison}
+      - PORT=${PROXY_PORT:-8080}
     depends_on:
       mysql:
         condition: service_healthy
