--- a/.env.example
+++ b/.env.example
@@ -1,52 +1,50 @@
-# ============================================
 # Latency Poison Configuration
-# Copy this file to .env and adjust values
-# ============================================
+# Copy this file to .env and customize as needed
 
-# --------------------------------------------
-# Database Configuration (MySQL)
-# --------------------------------------------
+# =============================================================================
+# DATABASE
+# =============================================================================
 DATABASE_HOST=localhost
 DATABASE_PORT=3306
 DATABASE_USER=latencypoison
 DATABASE_PASSWORD=latencypoison
 DATABASE_NAME=latencypoison
-
-# MySQL Root Password (for initial setup)
 MYSQL_ROOT_PASSWORD=rootpassword
 
-# --------------------------------------------
-# API Configuration (Python FastAPI)
-# --------------------------------------------
-API_PORT=8000
-SECRET_KEY=your-secret-key-change-in-production
-
-# JWT Token expiration (minutes)
-ACCESS_TOKEN_EXPIRE_MINUTES=30
-
-# --------------------------------------------
-# Proxy Configuration (Go Fiber)
-# --------------------------------------------
-PROXY_PORT=8080
-
-# --------------------------------------------
-# Frontend Configuration (React)
-# --------------------------------------------
-FRONTEND_PORT=3000
-
-# API URL (as seen from browser)
-REACT_APP_API_BASE_URL=http://localhost:8000
-REACT_APP_PROXY_API_BASE_URL=http://localhost:8080
-
-# --------------------------------------------
-# Default Admin User (created on first run)
-# --------------------------------------------
+# =============================================================================
+# ADMIN USER (created on first run)
+# =============================================================================
 ADMIN_USERNAME=admin
 ADMIN_EMAIL=admin@example.com
 ADMIN_PASSWORD=admin123
 ADMIN_FULL_NAME=Administrator
 
-# --------------------------------------------
-# phpMyAdmin Configuration
-# --------------------------------------------
+# =============================================================================
+# DEFAULT API KEY
+# =============================================================================
+# This key is created for the admin user and used by the MITM proxy
+# Change this in production!
+DEFAULT_API_KEY=lp_ZikWa6p9yaXpOUgrw0gDMdmN379vBFslrk89iUM_wWg
+
+# =============================================================================
+# PORTS
+# =============================================================================
+API_PORT=8000
+PROXY_PORT=8080
+FORWARD_PROXY_PORT=8888
+MITM_PORT=9090
+FRONTEND_PORT=3000
 PHPMYADMIN_PORT=8081
+
+# =============================================================================
+# SECURITY
+# =============================================================================
+# Change this in production!
+SECRET_KEY=your-secret-key-change-in-production
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+# =============================================================================
+# FRONTEND
+# =============================================================================
+REACT_APP_API_BASE_URL=http://localhost:8000
+REACT_APP_PROXY_API_BASE_URL=http://localhost:8080
